# GollaNikhil-PaceStock

./: .gitattributes  .gitignore  BUILD.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  QUICKSTART.md  QUICK_RUN.md  README.md  WASM_SETUP.md  build.ps1  package.json  run_demo.ps1  setup.ps1  vercel.json
.github/workflows/: build.yml
api/: backtest.js  backtest.py  hello.js
config/: sma_demo.yaml
demo/: sample_data.csv
notebooks/: demo.ipynb
public/: app.js  index.html
python/: CMakeLists.txt  bindings.cpp  fluxback.py
scripts/: prepare_data.ps1
src/: main.cpp
src/analytics/: Analytics.cpp  Analytics.h
src/data/: DataLoader.cpp  DataLoader.h
src/execution/: ExecutionSimulator.cpp  ExecutionSimulator.h
src/indicators/: IndicatorEngine.cpp  IndicatorEngine.h
src/regime/: RegimeDetector.cpp  RegimeDetector.h
src/strategy/: StrategyEngine.cpp  StrategyEngine.h
src/utils/: ConfigParser.cpp  ConfigParser.h
tests/: CMakeLists.txt  test_indicator.cpp
